--- a/readme.org
+++ b/readme.org
@@ -3,4 +3,8 @@
 A simple lisp interpreter, closer to the original lisp implementation
 and PicoLisp.
 
-
+* Left to implement
+- comments
+- error checking everywhere
+- =&rest= for lambdas and macros to implement defun correctly
+- arithmetic C-like operators: +, -, *, /, %
